# docker-kernel-exporter

./: .gitignore  CMakeLists.txt  README.md  kernel-de.conf  kernel-de.conf.template
configs/: kernel-de.conf
docs/: .$scheme.drawio.bkp  metrics.xlsx  scheme.drawio
include/: additional_funcs.h  additional_types.h  collecting_funcs.h  collector.h  filesystem_funcs.h  metric_calc_funcs.h  metric_form_funcs.h  port_listener.h
package/: kernel-de.deb
package/DEBIAN/: control  postinst
package/etc/kernel-de/: kernel-de.conf
package/etc/systemd/system/: kde-collector.service
scripts/: build-deb.sh  fast_rebuild.sh  full_rebuild.sh
src/: additional_funcs.cpp  additional_funcs.h  additional_types.h  collecting_funcs.cpp  collector.cpp  collector.h  filesystem_funcs.cpp  main.cpp  metric_calc_funcs.cpp  metric_calc_funcs.h  metric_form_funcs.cpp  port_listener.cpp
systemd/: DEPRECATED.md  kde-collector.service  kde.socket  kde@.service
